# O

./: .env.example  .gitignore  CHANGELOG.md  HANDOFF_C16_MIND.md  LICENSE  README.md  app.py  body.py  clean.sh  mind.py  pyproject.toml  run_test.sh
grammar/: parser.py
grammar/docs/: REFERENCE.md
grammar/tests/: test_all.py  test_parser.py
interactors/: base.py  echo.py  eval.py  incoming.py  listen.py  name.py  publish.py  read.py  say.py  spawn.py  stdout.py  up.py  wake.py
interactors/docs/: REFERENCE.md  SAY.md  STDOUT.md  STDOUT_USER_TEST.md
interactors/tests/: test_echo.py  test_eval.py  test_incoming.py  test_listen.py  test_name.py  test_publish.py  test_read.py  test_say.py  test_spawn.py  test_stdout.py  test_up.py  test_wake.py
spec/: 0.0.1.0-System_Prompt.md  0.1.0.0-Grammar_Specification.md  0.1.0.0-Specification.md  BOOT_INTERACTORS.md  DATA_FOOTPRINT_ANALYSIS.md  bash-transformer.md  interactor_ideas.md
state/: README.md  state.py
state/checkpoints/: checkpoint_0.json
state/tests/: test_state.py
tests/: test_app.py  test_body.py  test_body_polling.py  test_body_transformer.py  test_deepseek_integration.py  test_deepseek_live.py  test_fifo.py  test_full_pipeline.py  test_integration.py  test_integration_camp2.py  test_mind.py  test_stdout_integration.py  test_user_session.py
transformers/: __init__.py  base.py  deepseek.py  fifo.py  human.py
transformers/tests/: test_body_polling.py  test_deepseek.py  test_transformers.py
